# bd2-proyecto-los-manos

./: .gitignore  CMakeLists.txt  README.md  bd2  insert  range_search  results.csv  search
backend/: index.js
frontend/: .prettierrc  package-lock.json  package.json
frontend/pages/: index.js
generator/: register-dataset.txt  test-generator.cpp
generator/datasets/: firstnames.txt  lastnames.txt
include/: generator.hpp  index.hpp  pagemanager.hpp
include/bplus/: .bptree.hpp.swp  bptree.hpp  pagemanager.hpp
include/hash/: dynamic_hash.hpp
include/random_file/: .random_file.hpp.swp  :w  random_file.hpp
include/register/: register.hpp
interfaz/.next/cache/autodll-webpack-plugin/development_instance_0_c569e61c72dbbf37607408ee06111c1d/: dll_09015462c9fb5cf0f0a4.js  dll_09015462c9fb5cf0f0a4.js.map
qt/: bptree.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  random_file.hpp  register.hpp
src/: bptree.cpp  main.cpp  pagemanager.cpp
src/bptree/: bptree.cpp  pagemanager.cpp
src/hash/: dynamic_hash.cpp
src/random_file/: random_file.cpp
test/: data_hash1.bin.aux  data_hash2.bin.aux  data_hash3.bin.aux  data_hash4.bin.aux  data_hash5.bin.aux
webscripts/: insert  insert.cpp  range_search  read.cpp  search  search-range.cpp  search.cpp
